; ModuleID = '/home/carl/AnghaBench/libevent/extr_http.c_evhttp_set_timeout.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_http.c_evhttp_set_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evhttp = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @evhttp_set_timeout(%struct.evhttp* %0, i32 %1) #0 {
  %3 = alloca %struct.evhttp*, align 8
  %4 = alloca i32, align 4
  store %struct.evhttp* %0, %struct.evhttp** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.evhttp*, %struct.evhttp** %3, align 8
  %6 = getelementptr inbounds %struct.evhttp, %struct.evhttp* %5, i32 0, i32 1
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @evhttp_set_timeout_(i32* %6, i32 %7, i32 -1)
  %9 = load %struct.evhttp*, %struct.evhttp** %3, align 8
  %10 = getelementptr inbounds %struct.evhttp, %struct.evhttp* %9, i32 0, i32 0
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @evhttp_set_timeout_(i32* %10, i32 %11, i32 -1)
  ret void
}

declare dso_local i32 @evhttp_set_timeout_(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
